# tpp-mlir

./: .gitignore
benchmarks/mlir/: test.mlir  test_2_dim.mlir  test_3_dim_gemm.mlir
benchmarks/mlir/einsum/: test_2_dim_brgemm.mlir  test_brgemm.mlir  test_seq.mlir
benchmarks/mlir/einsum/springer/: abdfe-cf-abcde.mlir  springer_bench.json
include/Einsum/: CMakeLists.txt  Passes.h  Passes.td
include/Einsum/Dialect/: CMakeLists.txt
include/Einsum/Dialect/Einsum/: CMakeLists.txt  EinsumDialect.h  EinsumDialect.td  (+5 more)
include/LinalgX/: CMakeLists.txt  Passes.h  Passes.td
include/LinalgX/Dialect/: CMakeLists.txt
include/TeCo/: CMakeLists.txt  PassBundles.h  PassBundles.td  Passes.h  Passes.td
include/TeCo/Dialect/: CMakeLists.txt
include/TeCo/Dialect/TeCo/: CMakeLists.txt  TeCoDialect.h  TeCoDialect.td  TeCoOps.h  TeCoOps.td
include/TeCo/Transforms/: Transforms.h
lib/: CMakeLists.txt
lib/Einsum/Conversion/: CMakeLists.txt
lib/Einsum/Dialect/: CMakeLists.txt
lib/LinalgX/Conversion/: CMakeLists.txt
lib/LinalgX/Dialect/: CMakeLists.txt
lib/TPP/: DefaultPipeline.cpp  DefaultTppPasses.cpp
lib/TeCo/: CMakeLists.txt  DefaultPipeline.cpp  DefaultTeCoPasses.cpp
lib/TeCo/Conversion/: CMakeLists.txt
lib/TeCo/Conversion/ConvertTeCoToLoops/: CMakeLists.txt  ConvertTeCoToLoops.cpp
lib/TeCo/Dialect/: CMakeLists.txt
lib/TeCo/Dialect/TeCo/: CMakeLists.txt  TeCoDialect.cpp  TeCoOps.cpp
lib/TeCo/PassBundles/: CMakeLists.txt  LocalDialectsLowering.cpp
lib/TeCo/Transforms/: CMakeLists.txt
tools/tpp-opt/: tpp-opt.cpp
tools/tpp-run/: tpp-run.cpp
(+17 files in other folders)
